Implemented user registration and admin login functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,4 +7,5 @@
 {% block content %}
     <h1>Welcome to Kuizu!</h1>
     <p>Test your knowledge with our quizzes.</p>
+    <p>Hello {{user.full_name}}</p>
 {% endblock %}
