--- a/templates/authnavbar.html
+++ b/templates/authnavbar.html
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav column-gap-3">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
+            <a class="nav-link active" href="{{url_for('index')}}">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('login')}}">Login</a>
