--- a/templates/login.html
+++ b/templates/login.html
@@ -8,25 +8,23 @@ login - Kuizu
 
 <div class="form-container">
 
-    <form method="post" class="login_form">
+    <form method="post" class="login_form" action="{{ url_for('login_post') }}">
 
         <div class="mt-4">
             <h1>Login</h1>
 
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address
-                    <input type="email" class="form-control" id="username" aria-describedby="emailHelp" required>
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </label>
+                <label for="username" class="form-label">Username *</label>
+                <input type="text" name="username" id="username" class="form-control mt-1" required>
             </div>
 
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password
-                    <input type="password" class="form-control" id="password" required>
+                    <input type="password" class="form-control" id="password" name="password" required>
                 </label>
             </div>
             
-            <button type="submit" class="btn btn-success">Submit</button>
+            <button type="submit" class="btn btn-success">Login</button>
         </div>
 
     </form>
