--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -98,7 +98,7 @@
                                         <td>{{ quiz.questions|length }}</td>
                                         <td>
                                             <div class="btn-group btn-group-sm">
-                                                <a href="#" class="btn btn-info">
+                                                <a href="{{url_for('edit_quiz',quiz_id = quiz.id)}}" class="btn btn-info">
                                                     <i class="bi bi-pencil"></i>
                                                 </a>
                                                 <a href="#" class="btn btn-primary">
@@ -123,6 +123,30 @@
             </div>
         </div>    
     </div>
+
+<!-- Delete Quiz Modals -->
+{% for quiz in quizzes %}
+<div class="modal fade" id="deleteQuiz{{ quiz.id }}" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content bg-dark text-light">
+            <div class="modal-header border-secondary">
+                <h5 class="modal-title">Delete Quiz</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete "{{ quiz.title }}"?</p>
+                <p class="text-danger"><small>This action cannot be undone.</small></p>
+            </div>
+            <div class="modal-footer border-secondary">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <form action="{{ url_for('delete_quiz', quiz_id=quiz.id) }}" method="POST" style="display: inline;">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %}
 
 {% endblock %}
 
