--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -101,7 +101,7 @@
                                                 <a href="{{url_for('edit_quiz',quiz_id = quiz.id)}}" class="btn btn-info">
                                                     <i class="bi bi-pencil"></i>
                                                 </a>
-                                                <a href="#" class="btn btn-primary">
+                                                <a href="{{url_for('view_quiz',quiz_id = quiz.id)}}" class="btn btn-primary">
                                                     <i class="bi bi-eye"></i>
                                                 </a>
                                                 <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteQuiz{{ quiz.id }}">
